# sqso_datalogger

./: HL_2P.sll  HL_2P.spj  HL_2P_events.py  LICENSE
HL_2P/: .project  lv_conf.h  lv_drv_conf.h
HL_2P/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
HL_2P/ui/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_number_temp.c  ui_comp_number_temp.h
HL_2P/ui/images/: ui_img_download_png.c
HL_2P/ui/screens/: ui_FwUpdate.c  ui_HomeScreen.c  ui_LogScreen.c  ui_SettingsScreen.c
components/: Number Temp.ecomp
